# LLM-MultiAgents-Langchain

./: README.md  pyproject.toml
notebooks/: demoMultiAgent.ipynb
src/: app.py  main.py
src/features/: data_analysis_tool.py  fact_check_tool.py  math_tool.py  news_tool.py  nlp_tool.py  web_search_tool.py  wikipedia_tool.py
src/models/: input_models.py
src/utils/: environment_setup.py  evaluation_metrics.py  language_model.py  prompt_setup.py
