[tool.poetry]
name = "multiagent-langchain"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckduckgo-search = "^6.2.5"
wikipedia = "^1.4.0"
langchain = "^0.2.11"
langchainhub = "^0.1.20"
langchain-openai = "^0.1.20"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.10"
numexpr = "^2.10.1"
streamlit = "^1.37.0"
rouge-score = "^0.1.2"
nltk = "^3.8.1"
sacrebleu = "^2.4.2"
textstat = "^0.7.4"
spacy = "^3.7.5"
matplotlib = "^3.9.1"
transformers = "^4.43.3"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
